--- a/test.ipynb
+++ b/test.ipynb
@@ -2,8 +2,486 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 165,
+   "id": "cross-cologne",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = 2\n",
+    "num = 1\n",
+    "intere_num =4\n",
+    "indices_top = torch.randint(0,5,(batch,num))\n",
+    "indicex_K = torch.randint(0,5,(batch,intere_num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "assisted-antigua",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0],\n",
+       "         [1]]), tensor([[2, 0, 3, 1],\n",
+       "         [3, 4, 4, 4]]))"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices_top,indicex_K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "detected-coaching",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indicex_K.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "european-rescue",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0, 0, 0],\n",
+       "        [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = indices_top.unsqueeze(-1).repeat(1,1,1,intere_num).reshape(batch,-1)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "educational-taiwan",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2, 0, 3, 1],\n",
+       "        [3, 4, 4, 4]])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = indicex_K.repeat(1,1,num).reshape(batch,-1)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "peaceful-particular",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[tensor([0, 0, 0, 0]), tensor([2, 0, 3, 1])],\n",
+       " [tensor([1, 1, 1, 1]), tensor([3, 4, 4, 4])]]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coordinate = [[a,b] for a,b in zip(x, y)]\n",
+    "coordinate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "narrow-documentation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0038, 0.3236, 0.3759, 0.8879, 0.3769],\n",
+       "        [0.6577, 0.1867, 0.5111, 0.2980, 0.2138],\n",
+       "        [0.0371, 0.0204, 0.9866, 0.8967, 0.3042],\n",
+       "        [0.7230, 0.5741, 0.8102, 0.5139, 0.4177],\n",
+       "        [0.5401, 0.5997, 0.4795, 0.1747, 0.4590]])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_matrix = torch.rand(5,5)\n",
+    "state_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "crude-constitutional",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([1.5912]), tensor([0.9395])]"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[state_matrix[co].reshape(num,-1).sum(dim=-1) for co in coordinate]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "finnish-grain",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.5912],\n",
+       "        [0.9395]])"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([state_matrix[co].reshape(num,-1).sum(dim=-1) for co in coordinate]).reshape(batch,-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "destroyed-sheriff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "thermal-series",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices_K = torch.tensor([[1,2,3],[4,5,6]])\n",
+    "hitted_idx = torch.tensor([1,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "diagnostic-census",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[4, 5, 6],\n",
+       "        [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices_K[hitted_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "stone-parade",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2, 4])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([indices_K[a,b] for a,b in enumerate(hitted_idx)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "expensive-satisfaction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2, 6])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices_K[[0,1],[1,0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "discrete-transmission",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1],\n",
+       "        [1, 1, 1],\n",
+       "        [1, 1, 1],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hitted_idx = hitted_idx.reshape(-1,1).repeat(1,3)\n",
+    "hitted_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "aware-processor",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3, 1, 1, 1, 4, 5, 6, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([torch.cat([a,b]) for a,b in zip(indices_K, hitted_idx)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "actual-upper",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1, 2, 3],\n",
+       "         [1, 1, 1]],\n",
+       "\n",
+       "        [[4, 5, 6],\n",
+       "         [1, 1, 1]]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coordinate = torch.cat([torch.cat([a,b]).reshape(2,-1) for a,b in zip(indices_K, hitted_idx)]).reshape(-1,2,3)\n",
+    "coordinate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "reflected-croatia",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8992, 0.2708, 0.9456, 0.4589, 0.2460, 0.4221, 0.0032, 0.1878, 0.8658,\n",
+       "         0.1525],\n",
+       "        [0.5863, 0.5381, 0.4096, 0.6247, 0.5890, 0.5427, 0.9217, 0.2185, 0.2247,\n",
+       "         0.5942],\n",
+       "        [0.9760, 0.1699, 0.7436, 0.7046, 0.2264, 0.9429, 0.8133, 0.7484, 0.8475,\n",
+       "         0.8991],\n",
+       "        [0.6667, 0.0898, 0.3281, 0.9240, 0.2775, 0.7245, 0.1304, 0.9007, 0.0738,\n",
+       "         0.9207],\n",
+       "        [0.2720, 0.9936, 0.6298, 0.7130, 0.2564, 0.6909, 0.8498, 0.5069, 0.7609,\n",
+       "         0.4941],\n",
+       "        [0.2214, 0.7662, 0.4298, 0.2983, 0.9334, 0.8935, 0.9072, 0.8236, 0.4182,\n",
+       "         0.8915],\n",
+       "        [0.4789, 0.6074, 0.1716, 0.9682, 0.5670, 0.7137, 0.1155, 0.5780, 0.4163,\n",
+       "         0.1845],\n",
+       "        [0.6600, 0.7084, 0.0840, 0.4456, 0.3727, 0.0399, 0.7062, 0.0883, 0.1861,\n",
+       "         0.6693],\n",
+       "        [0.8065, 0.0205, 0.1175, 0.6070, 0.6301, 0.0767, 0.6143, 0.0519, 0.5735,\n",
+       "         0.7901],\n",
+       "        [0.8914, 0.5336, 0.7749, 0.5669, 0.9348, 0.8793, 0.5937, 0.9090, 0.0525,\n",
+       "         0.8439]])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crf = torch.rand([10,10])\n",
+    "crf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "cross-transport",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.5381, 0.1699, 0.0898])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crf[coordinate[0].numpy().tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "pretty-postage",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinate = coordinate.cpu().numpy().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "built-bibliography",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5381, 0.1699, 0.0898],\n",
+       "        [0.9936, 0.7662, 0.6074]])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([crf[co] for co in coordinate]).reshape(-1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "involved-stick",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.7978, 2.3671])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([crf[co] for co in coordinate]).reshape(-1,3).sum(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "narrative-chassis",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "incomplete-organ",
+   "id": "statutory-equipment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "worse-conditions",
+   "id": "attached-hudson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "worthy-intermediate",
+   "id": "compound-douglas",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "floppy-output",
+   "id": "foreign-juice",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "theoretical-victim",
+   "id": "related-court",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "obvious-acrylic",
+   "id": "chinese-indonesia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "realistic-addition",
+   "id": "humanitarian-breach",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "industrial-daisy",
+   "id": "collected-module",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "entertaining-shirt",
+   "id": "agreed-python",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "distinguished-perth",
+   "id": "israeli-season",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "expensive-active",
+   "id": "variable-garage",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "exceptional-denial",
+   "id": "opposite-announcement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "jewish-relation",
+   "id": "generic-newton",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "comic-charles",
+   "id": "broadband-alias",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "bearing-owner",
+   "id": "lovely-excellence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "sorted-contribution",
+   "id": "wanted-distance",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "limited-vietnamese",
+   "id": "extensive-dakota",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "adverse-liabilities",
+   "id": "refined-karaoke",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "committed-bristol",
+   "id": "sharing-horse",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "opened-drunk",
+   "id": "proud-dialogue",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "careful-consistency",
+   "id": "martial-botswana",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "dressed-relations",
+   "id": "assisted-turning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "federal-coffee",
+   "id": "emotional-meter",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "narrow-locator",
+   "id": "virtual-marshall",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "excessive-harassment",
+   "id": "governing-floating",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "working-basis",
+   "id": "fabulous-legend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "romance-feelings",
+   "id": "wound-silver",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "metallic-resistance",
+   "id": "vanilla-restoration",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "viral-stadium",
+   "id": "forced-growing",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prescribed-subscription",
+   "id": "confidential-northeast",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -568,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hawaiian-stationery",
+   "id": "corrected-complement",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -576,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "finite-northern",
+   "id": "fuzzy-chain",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "miniature-argentina",
+   "id": "laughing-particular",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "emotional-developer",
+   "id": "lesbian-decline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "acute-palestine",
+   "id": "passing-semester",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "separate-maximum",
+   "id": "champion-wyoming",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "seventh-exhaust",
+   "id": "reported-composition",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "scheduled-salem",
+   "id": "adolescent-toronto",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "bored-phase",
+   "id": "million-tract",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "collectible-casino",
+   "id": "historical-photography",
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sufficient-secret",
+   "id": "unlike-vinyl",
    "metadata": {},
    "outputs": [],
    "source": []
